# hs

./: .gitignore  README.md  functions.hs
cis194/04/: 04-answers.hs
cis194/05/: Calc.hs
cis194/06/: Fibonacci.hs
cis194/07/: Scrabble.hs
cis194/08/: Main.hs  Party.hs
cis194/10/: AParser.hs
cis194/11/: SExpr.hs
cis194/12/: Risk.hs
cis194/2013/01/: 01-answers.hs
cis194/2013/02/: LogAnalysis.hs
cis194/2013/03/: Golf.hs
cis194/2013/04/: 04-answers.hs
cis194/2013/07/: JoinList.hs  JoinListBuffer.hs  JoinListEditor.hs
cis194/2013/11/: funcA.hs
cis194/2013/12/: Risk.hs
cis194/2015/02/: HW02.hs
cis194/2015/03/: HW03.hs
cis194/2015/04/: HW04.hs
cis194/2015/05/: HW05.hs
cis194/2015/06/: HW06.hs
cis194/2015/07/: HW07.hs
euler/: .gitignore  01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  16.hs  17.hs  19.hs  2.hs  20.hs  22.hs  23.hs  24.hs  25.hs  28.hs  29.hs  30.hs  34.hs  35.hs  36.hs  4.hs  40.hs  48.hs  7.hs  8.hs  Makefile  clean.sh
func/: read.hs  sort.hs
lyah/: 2-starting-out.hs  3-types-and-typeclasses.hs  4-syntax-in-functions.hs  5-recursion.hs  6-higher-order-functions.hs  8-making-our-own-types-and-typeclasses.hs
lyah/10-functionally-solve-problems/: heathrow.hs  rpn.hs
lyah/10-functionally-solve-problems/rpn/: main.hs
lyah/11-funtors-applicative-functors-and-monoids/: applicative.hs  functors.hs  monoids.hs  newtype.hs
lyah/12-a-fistful-of-monads/: do.hs  intro.hs  list.hs  walk-the-line.hs
lyah/13-for-a-few-monads-more/: error.hs  monadic_functions.hs  prob.hs  reader.hs  state.hs  writer.hs
lyah/14-zippers/: breadcrumbs.hs  breadcrumbsMaybe.hs  fs.hs  fsMaybe.hs  list.hs  tree.hs
lyah/7-modules/: 7-modules.hs  Char.hs  Geometry.hs  List.hs  Map.hs  Set.hs  own.hs
lyah/7-modules/Math/: Cube.hs  Sphere.hs
lyah/8-making-our-own-types-and-typeclasses/: 8-making-our-own-types-and-typeclasses.hs  Person.hs  Shapes.hs  Vector.hs  functor.hs  yesno.hs
lyah/9-input-and-output/: Makefile  bytestrings.hs  exceptions.hs  for.hs  functions.hs  girlfriendCaps.txt  hello.hs  input.hs  let.hs  open.hs  palindromes.hs  plusoumoins.hs  random.hs  read.hs  return.hs  shortLines.hs  todo.hs  tododel.hs
lyah/9-input-and-output.hs/: functions.hs  input.hs  loop.hs
ninety-nine/: 1-10.hs  11-20.hs  21-28.hs  31-41.hs
real-world/: 1-getting-started.hs  2-types-and-functions.hs  3-defining-types-functions.hs  parsec.hs
real-world/16-using-parsec/: CSVParser.hs  CSVParser2.hs  parsec
real-world/17-ffi/: REFS  simple.hs
real-world/4-functional-programming/: fixLines.hs  functions.hs  interact.hs  loops.hs  safes.hs
real-world/5-writing-a-library/: Main.hs  Prettify.hs  PrettyJSON.hs  PutJSON.hs  SimpleJSON.hs
real-world/6-using-typeclasses/: typeclasses.hs
utils/: ball.hs  lookAndSay.hs  mandel.hs  num.hs  trees.hs
utils/delaySRT/: Main.hs  SRTFile.hs  delaySRT.cabal
utils/dict/: LICENSE  dict.cabal  run.sh
utils/dict/src/: Main.hs
utils/genpoints/: genpoints.cabal
utils/genpoints/src/: Main.hs  Types.hs  Utils.hs
utils/hangman/: dico.txt  hangman.hs
utils/kmeans/: kmeans.cabal  test.xy
utils/kmeans/src/: Geometry.hs  KMeans.hs  Main.hs  Parser.hs
utils/lsystem/: hlsystem.cabal
utils/lsystem/src/: Examples.hs  LSystem.hs  Main.hs
utils/lsystem/src/Graphics/: Display.hs  Frame.hs  Geometry.hs
utils/noiseAdd/: fandisk.xyz  noise.xyz  noiseAdd.cabal  noiseAdd.hs
utils/points-square/: Main.hs  points-square.cabal
utils/srt/: README.md  run.sh  srt.cabal  stack.yaml
utils/srt/src/: Main.hs  SRTFile.hs
utils/srt/tests/: nge.srt
utils/subsurf/: Main.hs  run.sh  stack.yaml  subsurf.cabal
utils/subsurf/SubSurf/: Examples.hs  Geometry.hs  Subdiv.hs  Types.hs
utils/xy-viewer/: xy-viewer.cabal
utils/xy-viewer/src/: Main.hs
