name:                dict
version:             0.1.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Jocelyn MEYRON
maintainer:          Jocelyn.Meyron@grenoble-inp.org
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable dict
  ghc-options:        -Wall -g
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9,
                       containers,
                       optparse-applicative,
                       split,
                       strict
  hs-source-dirs:      src
  default-language:    Haskell2010
