name:                genpoints
version:             0.1.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Jocelyn MEYRON
maintainer:          Jocelyn.Meyron@ensimag.grenoble-inp.fr
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable genpoints
  ghc-options:         -Wall -O2 -threaded
  main-is:             Main.hs
  other-modules:       Gen.Basics,
                       Gen.Circle,
                       Gen.Cuboid,
                       Gen.Line,
                       Gen.Square,
                       Types,
                       Utils
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
