name:                kmeans
version:             0.1.0
synopsis:            kmeans algorithm
license:             MIT
license-file:        LICENSE
author:              Jocelyn MEYRON
maintainer:          Jocelyn.Meyron@ensimag.grenoble-inp.fr
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable kmeans
  ghc-options:         -Wall
  main-is:             Main.hs
  other-modules:       KMeans,
                       Geometry,
                       Parser
  build-depends:       base >=4.7 && <4.8,
                       containers >=0.5 && <0.6,
                       random >=1.1 && <1.2,
                       OpenGL >= 2.9 && < 3.0,
                       GLFW-b >= 1.4 && < 1.6,
                       parsec >= 3.1 && < 3.2
  hs-source-dirs:      src
  default-language:    Haskell2010
