name:                hlsystem
version:             0.1.0
synopsis:            L-system grammars
-- description:         
license:             MIT
license-file:        LICENSE
author:              Jocelyn MEYRON
maintainer:          Jocelyn.Meyron@ensimag.grenoble-inp.fr
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable hlsystem
  ghc-options:         -Wall
  main-is:             Main.hs
  other-modules:       Examples,
                       LSystem,
                       Graphics.Geometry,
                       Graphics.Frame,
                       Graphics.Display
  build-depends:       base >=4.7 && <4.8,
                       mtl >= 2.2 && < 2.3,
                       OpenGL >= 2.9 && < 3.0,
                       GLFW-b >= 1.4 && < 1.5
  hs-source-dirs:      src
  default-language:    Haskell2010
