name:                xy-viewer
version:             0.1.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Jocelyn MEYRON
maintainer:          Jocelyn.Meyron@grenoble-inp.org
-- copyright:           
category:            Math
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable xy-viewer
  ghc-options:         -Wall -O2 -threaded
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <5,
                       gloss
  hs-source-dirs:      src
  default-language:    Haskell2010
